# OpticalCI

./: .coverage  .gitignore  CHANGELOG.md  Example1_backup_20250723_142455.py  Example1_paths_backup_20250723_143054.py  FIX_REPORT.md  LICENSE  README.md  cleanup.py  cleanup_post_restructure.py  correction_report_20250723_141842.txt  corregir.py  diagnosis.py  fix.py  install_compatible.py  migrate_photonic_components.py  onn_model.pth  physics_verification_report.txt  proyect.toml  pyproyect.toml  pytest.ini  quick_fix.py  quick_migration.py  quick_test.py  quick_test_adddrop.py  quick_test_adddrop_fixed.py  requirements-dev.txt  requirements.txt  reset.py  run_example1.sh  setup.py  setup.sh  test.py  test_installation.py  test_migration.py  test_pytorch_safe.py  testing.py  testonn.py  validate.py  verify_restructure.py
safety_backup_20250718_162730/: .coverage  .gitignore  VERIFICATION_REPORT.md  benchmark.py  explore.py  pyproject.toml  quick_test.py  requirements.txt  restore.py  restructure_ptonn.py  setup_ptonn.sh  test_final.py  test_simple.py  test_simple_final.py  test_ultimate.py  verify_pytorch.py
safety_backup_20250718_162730/configs/hardware/: __init__.py
safety_backup_20250718_162730/data/benchmark_results/: __init__.py
safety_backup_20250718_162730/data/sample_datasets/: __init__.py
safety_backup_20250718_162730/examples/: example_basic_usage.py  example_training.py
safety_backup_20250718_162730/examples/advanced/: quantum_photonics.py
safety_backup_20250718_162730/examples/basic/: __init__.py  basic_training.py  simple_mrr.py  simple_mzi.py
safety_backup_20250718_162730/examples/benchmarks/: __init__.py  accuracy_benchmarks.py  performance_comparison.py
safety_backup_20250718_162730/examples/tutorials/: 04_advanced_architectures.py  __init__.py
safety_backup_20250718_162730/scripts/: __init__.py  check_installation.py  run_benchmarks.py
safety_backup_20250718_162730/tests/: test_layers.py  test_models.py
safety_backup_20250718_162730/torchonn/: __init__.py
(+174 files in other folders)
